# pigeon-rs

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yaml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: rust-ci.yml
src/: arg.rs  helper.rs  lib.rs  main.rs
src/cmd/: connect.rs  init.rs  mod.rs  query.rs  read.rs  send.rs  send_bulk.rs  simple_query.rs
src/data_loader/: mod.rs  tabular_data.rs
src/data_sources/: csv.rs  image.rs  mod.rs  postgres.rs  ssh_tunnel.rs
src/email_builder/: bulk_email.rs  bulk_receiver.rs  email.rs  message.rs  message_template.rs  mime.rs  mod.rs  receiver.rs  sender.rs  status.rs
src/email_builder/message/: message.rs  mod.rs  reader.rs  text_message.rs
src/email_formatter/: eml.rs  mod.rs
src/email_handler/: bulk_email.rs  email.rs  message.rs  message_template.rs  mod.rs
src/email_provider/: aws.rs  mod.rs
src/email_transmission/: client.rs  mock_client.rs  mod.rs  sent_email.rs  smtp.rs  status.rs
src/sources/: csv.rs  image.rs  mod.rs  ssh_tunnel.rs
test_data/: contacts.csv  email_html.txt  email_multipart_alternative.txt  email_multipart_mixed.txt  email_multipart_mixed_alternative.txt  email_plaintext.txt  email_singlepart_attachment.txt  init.sql  message.html  message.txt  message.yaml  message_empty.yaml  message_none.yaml  message_personalized.yaml  none_html_message.yaml  receiver.csv  test.odt
tests/: test_query.rs  test_read.rs
tests/cmd/: lib.rs  test_connect.rs  test_init.rs  test_query.rs  test_read.rs  test_send.rs  test_send_bulk.rs
