cargo-features = ["different-binary-name"]

[package]
name = "pigeon-rs"
version = "0.2.0"
authors = ["quambene <contact.quambene@gmail.com>"]
description = "Command line tool for cheap and efficient email automation"
edition = "2018"
homepage = "https://github.com/quambene/pigeon-rs"
repository = "https://github.com/quambene/pigeon-rs"
documentation = "https://github.com/quambene/pigeon-rs"
keywords = ["mail", "email", "automation", "cli"]
categories = ["command-line-utilities", "email"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.40"
rusoto_ses = { version = "0.47.0", default-features = false, features = ["rustls"] }
rusoto_core = { version = "0.47.0", default-features = false, features = ["rustls"] }
rusoto_credential = "0.47.0"
yaml-rust = "0.4.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
tokio = "1.12.0"
csv = "1.1.6"
clap = "2.33.3"
chrono = "0.4.19"
polars = { git = "https://github.com/pola-rs/polars", rev = "dd70f3167f53e4ba59a0fe9c2f8aca18cdbb6b0d", version = "0.17", features = ["dtype-u8"] }
connectorx = { git = "https://github.com/sfu-db/connector-x", rev = "0bc0b928e43c53b87c6ab4049f85a8042ac62bed", version = "0.2.2-alpha.5", features = ["src_postgres", "dst_arrow2"] }
postgres = "0.19.2"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
lettre = { version = "0.10.0-rc.4", features = ["file-transport", "rustls-tls"] }
infer = "0.5.0"
bytes = "1.1.0"

[[bin]]
name = "pigeon-rs"
filename = "pigeon"
path = "src/main.rs"
