[package]
name = "pigeon-rs"
version = "0.4.0"
authors = ["quambene <contact.quambene@gmail.com>"]
description = "Command line tool for cheap and efficient email automation"
edition = "2021"
homepage = "https://github.com/quambene/pigeon-rs"
repository = "https://github.com/quambene/pigeon-rs"
documentation = "https://github.com/quambene/pigeon-rs"
keywords = ["mail", "email", "automation", "cli"]
categories = ["command-line-utilities", "email"]
readme = "README.md"
license = "Apache-2.0"

[[bin]]
name = "pigeon"
path = "src/main.rs"

[lib]
test = false

[[test]]
name = "integration_tests"
path = "tests/cmd/lib.rs"

[dependencies]
anyhow = "1.0.40"
rusoto_ses = { version = "0.47.0", default-features = false, features = ["rustls"] }
rusoto_core = { version = "0.47.0", default-features = false, features = ["rustls"] }
rusoto_credential = "0.47.0"
yaml-rust = "0.4.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
tokio = "1.12.0"
csv = "1.1.6"
clap = "2.33.3"
chrono = "0.4"
polars = { version = "0.32", features = ["dtype-u8"] }
connectorx = { version = "0.3.2", features = ["src_postgres", "dst_arrow2"] }
postgres = "0.19.2"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
lettre = { version = "0.10.0", default-features = false, features = ["builder", "pool", "smtp-transport", "file-transport", "rustls-tls"] }
infer = "0.5.0"
bytes = "1.1.0"
base64 = "0.13.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
